--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ node_modules
 .env.local
 .env.*.local
 
+
+# custom ignores
+.dlenv
+dl-project-2/dataset
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
