--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ node_modules
 .env.local
 .env.*.local
 
-
 # custom ignores
+.venv/
 .dlenv
 /dl-project-2/dataset
-
+course-notes
 # Log files
 npm-debug.log*
 yarn-debug.log*
