--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ node_modules
 .venv/
 #/ml-az-course/Part 1 - Data Preprocessing
 #/ml-az-course/Part 2 - Regression
-/ml-az-course/Part 3 - Classification
+#/ml-az-course/Part 3 - Classification
 /ml-az-course/Part 4 - Clustering
 /ml-az-course/Part 5 - Association Rule Learning
 /ml-az-course/Part 6 - Reinforcement Learning
