updated from windows

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,9 @@ node_modules
 .env.*.local
 
 # custom ignores
-.venv/
-/ml-az-course/
-#/ml-az-course/Part 1 - Data Preprocessing
-#/ml-az-course/Part 2 - Regression
-#/ml-az-course/Part 3 - Classification
-#/ml-az-course/Part 4 - Clustering
-#/ml-az-course/Part 5 - Association Rule Learning
-#/ml-az-course/Part 6 - Reinforcement Learning
-#/ml-az-course/Part 7 - Natural Language Processing
-#/ml-az-course/Part 8 - Deep Learning
-#/ml-az-course/Part 9 - Dimensionality Reduction
-#/ml-az-course/Part 10 - Model Selection _ Boosting
+venv/
+ml-az-course-files/
+
 
 # Log files
 npm-debug.log*
