--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ node_modules
 .env.local
 .env.*.local
 
+# custom ignores
+/venv/
+/Python-Reinforcement-Learning-Projects-master/
+/ml-az-course-files/
+
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
@@ -19,3 +25,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+.Rproj.user
