--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ node_modules
 .env.*.local
 
 # custom ignores
-.venv/
-.dlenv
-/dl-project-2/dataset
-course-notes
+/venv/
+/Python-Reinforcement-Learning-Projects-master/
+/ml-az-course-files/
+
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
@@ -24,3 +25,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+.Rproj.user
