added text removed logs and saves

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ node_modules
 /Python-Reinforcement-Learning-Projects-master/
 /ml-az-course-files/
 /cv-project-2-object-detection/
-
+/rl-projects/rl-project-00-convolutional-neural-network/logs/
+/rl-projects/rl-project-00-convolutional-neural-network/saves/
 
 # Log files
 npm-debug.log*
