--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,17 @@ node_modules
 
 # custom ignores
 /venv/
+/venv_mrl/
+/venv_cv/
+/venv_rlp/
+
 /Python-Reinforcement-Learning-Projects-master/
 /ml-az-course-files/
-
+/cv-project-2-object-detection/
+/rl-projects/rl-project-00-convolutional-neural-network/logs/
+/rl-projects/rl-project-00-convolutional-neural-network/saves/
+/rl-projects
+/cv-project-4-smart-cropping/
 
 # Log files
 npm-debug.log*
