--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 /venv_mrl/
 /venv_cv/
 /venv_rlp/
+/venv_bd/
 
 /Python-Reinforcement-Learning-Projects-master/
 /ml-az-course-files/
