--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ node_modules
 
 /cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
 /cv-project-2-object-detection/funny_dog.mp4
+/cv-project-2-object-detection/biscuit.mp4
 /cv-project-2-object-detection/output.mp4
 /cv-project-4-smart-cropping/data/
 /cv-project-4-smart-cropping/cropped/
