--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,7 @@ node_modules
 
 #ignore specific project folders
 /cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
-/cv-vision/cv-project-2-object-detection/funny_dog.mp4
-/cv-vision/cv-project-2-object-detection/biscuit.mp4
-/cv-vision/cv-project-2-object-detection/output.mp4
+/cv-vision/cv-project-2-object-detection/videos/
 /cv-vision/cv-project-4-smart-cropping/data/
 /cv-vision/cv-project-4-smart-cropping/cropped/
 
