--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,29 @@ node_modules
 .env.local
 .env.*.local
 
-# custom ignores
+# python environments ignores
 /venv/
-/Python-Reinforcement-Learning-Projects-master/
-/ml-az-course-files/
+/venv_dl/
+/venv_cv/
+/venv_mrl/
+/venv_rlp/
+/venv_ml/
 
+#ignore other project folders
+/rl-projects/
+/mastering-rl/
+/cv-vision/
+/dl/
+/course-notes/
+
+#ignore specific project folders
+/cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
+/cv-vision/cv-project-2-object-detection/videos/
+/cv-vision/cv-project-4-smart-cropping/data/
+/cv-vision/cv-project-4-smart-cropping/cropped/
+/cv-vision/cv-project-2-object-detection/data/VOCdevkit
+
+/dl/dl-project-2-cnn/dataset/
 
 # Log files
 npm-debug.log*
