--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ node_modules
 /venv_rlp/
 /venv_bd/
 
+/spark-3.3.1-bin-hadoop3/
 /Python-Reinforcement-Learning-Projects-master/
 /ml-az-course-files/
 /cv-project-2-object-detection/
