--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,13 @@ node_modules
 /venv_cv/
 /venv_mrl/
 /venv_rlp/
-
+/venv_dl/
+/venv_ml/
 #ignore other project folders
 /rl-projects/
 /mastering-rl/
+/dl/
+
 
 #ignore specific project folders
 /cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
