--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,24 @@ node_modules
 .env.*.local
 /venv/
 
+
+# python environments ignores
+/venv/
+/venv_cv/
+/venv_mrl/
+/venv_rlp/
+/venv_dl/
+/venv_ml/
+
+#ignore other project folders
+/rl-projects/
+/mastering-rl/
+/dl/
+/ml/
+/course-notes/
+/cv-vision/
+
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
