--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,15 @@ node_modules
 .env.*.local
 
 # custom ignores
-/venv/
+/venv_dl/
+/venv_ml/
 /venv_mrl/
 /venv_cv/
 /venv_rlp/
 
-/Python-Reinforcement-Learning-Projects-master/
-/ml-az-course-files/
-/cv-project-2-object-detection/
-/rl-projects/rl-project-00-convolutional-neural-network/logs/
-/rl-projects/rl-project-00-convolutional-neural-network/saves/
-/rl-projects
-/cv-project-4-smart-cropping/
+/dl/
+/rl-projects/
+/cv-vision/
 
 # Log files
 npm-debug.log*
