--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ node_modules
 /venv_mrl/
 /venv_rlp/
 /venv_ml/
+/venv_3dl/
+/venv_nlp/
+
+
 
 #ignore other project folders
 /rl-projects/
@@ -20,6 +24,8 @@ node_modules
 /cv-vision/
 /ml/
 /course-notes/
+/3d-dl/
+/nlp/
 
 #ignore specific project folders
 /cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
