--- a/.gitignore
+++ b/.gitignore
@@ -8,24 +8,19 @@ node_modules
 
 # python environments ignores
 /venv/
-/venv_dl/
-/venv_cv/
-/venv_mrl/
-/venv_rlp/
-/venv_ml/
-/venv_3dl/
-/venv_nlp/
-
+/venv_*
 
 
 #ignore other project folders
-/rl-projects/
-/mastering-rl/
+
+/3d-dl/
 /cv-vision/
 /ml/
-/course-notes/
-/3d-dl/
 /nlp/
+/rl-projects/
+/mastering-rl/
+
+
 
 #ignore specific project folders
 /cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
