--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,7 @@ node_modules
 .env.*.local
 
 # python environments ignores
-/venv/
-
-/venv_3dl/
-/venv_cv/
-/venv_dl/
-/venv_ml/
-/venv_mrl/
-/venv_nlp/
-/venv_rlp/
+/venv*
 
 #ignore other project folders
 /rl-projects/
@@ -25,6 +17,8 @@ node_modules
 /course-notes/
 /3d-dl/
 /nlp/
+/data-engineering/
+/football-tracking/
 
 #ignore specific project folders
 /cv-vision/cv-project-2-object-detection/ssd300_mAP_77.43_v2.pth
